# ssltui

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  TUI.md  pyproject.toml  ssltui.sh  ssltui_web.sh
.github/workflows/: pr.yaml
docs/: API.md  TODO.md  TUI.md
ssltui/: __init__.py  __main__.py  api.py  ca.py  config.py  renewal.py  store.py  tui.py
tests/: conftest.py  smoketest.py  test_2_store.py  test_3_tui_cert_lifecycle.py  test_4_api_serve.py  test_5_getroot.py  test_smoke.py  test_tui_init.py
tools/: convert_favicon.sh
