[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssltui"
version = "0.1.0"
description = "Local SSL Certificate Authority TUI / API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Hampus Linden", email = "hampus.linden@gmail.com" },
]
keywords = ["ssl", "tls", "certificate", "ca", "pki", "tui", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.82.0",
]

[project.optional-dependencies]
api = ["flask>=3.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/hampuslinden/ssltui"
Repository = "https://github.com/hampuslinden/ssltui"
Issues = "https://github.com/hampuslinden/ssltui/issues"

[project.scripts]
ssltui = "ssltui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ssltui"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.version]
path = "ssltui/__init__.py"
